--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -2,8 +2,9 @@ add_library(neutral OBJECT neutral.f90 atmos.f90 interp.f90 perturb.f90 proj.f90
 target_compile_options(neutral PRIVATE ${gfortran_opts})
 target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod
 hwm_ifc msis_ifc
-timeutils MPI::MPI_Fortran
-h5fortran::h5fortran)
+timeutils
+h5fortran::h5fortran
+MPI::MPI_Fortran)
 
 # self-tests
 add_executable(test_proj test_proj.f90
