--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -40,10 +40,12 @@ target_link_libraries(exe_frontend PRIVATE config hwloc_ifc hwloc_c pathlib)
 # --- gemini3d.run
 add_executable(gemini3d.run gemini3d_run.f90 runner.f90 $<TARGET_OBJECTS:exe_frontend>)
 target_link_libraries(gemini3d.run PRIVATE const config timeutils autogrid reader pathlib
-  h5fortran::h5fortran nc4fortran::nc4fortran hwloc_ifc hwloc_c MPI::MPI_Fortran)
-
+  h5fortran::h5fortran nc4fortran::nc4fortran hwloc_ifc hwloc_c)
 if(HWLOC_FOUND)
   target_link_libraries(gemini3d.run PRIVATE HWLOC::HWLOC)
+endif()
+if(HDF5_HAVE_PARALLEL)
+  target_link_libraries(gemini3d.run PRIVATE MPI::MPI_Fortran)
 endif()
 set_target_properties(gemini3d.run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
@@ -58,9 +60,12 @@ set_tests_properties(unit:gemini3d_run_ok PROPERTIES
 
 add_executable(magcalc.run magcalc_run.f90)
 target_link_libraries(magcalc.run PRIVATE exe_frontend autogrid reader config pathlib const hwloc_ifc hwloc_c
-  h5fortran::h5fortran nc4fortran::nc4fortran MPI::MPI_Fortran)
+  h5fortran::h5fortran nc4fortran::nc4fortran)
 if(HWLOC_FOUND)
   target_link_libraries(magcalc.run PRIVATE HWLOC::HWLOC)
+endif()
+if(HDF5_HAVE_PARALLEL)
+  target_link_libraries(magcalc.run PRIVATE MPI::MPI_Fortran)
 endif()
 set_target_properties(magcalc.run PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
@@ -88,7 +93,10 @@ target_sources(gemini3d.compare PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_out_h5.f90
   ${CMAKE_CURRENT_SOURCE_DIR}/../io/compare_in_h5.f90)
 target_link_libraries(gemini3d.compare PRIVATE assert config reader pathlib timeutils const
-  nc4fortran::nc4fortran h5fortran::h5fortran MPI::MPI_Fortran)
+  nc4fortran::nc4fortran h5fortran::h5fortran)
+if(HDF5_HAVE_PARALLEL)
+  target_link_libraries(gemini3d.compare PRIVATE MPI::MPI_Fortran)
+endif()
 
 set_target_properties(gemini3d.compare PROPERTIES
   RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
