use MUMPS_HAVE_Scotch as more specific indicator

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,7 +53,7 @@ if(mpi)
 else()
   target_link_libraries(gemini.bin PRIVATE MUMPS::MUMPS LAPACK::LAPACK MPI::MPI_Fortran MPI::MPI_C)
 endif()
-if(Scotch_FOUND)
+if(MUMPS_HAVE_Scotch)
   target_link_libraries(gemini.bin PRIVATE Scotch::Scotch)
   target_link_libraries(gemini.bin PRIVATE METIS::METIS)
 endif()
