--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -3,7 +3,7 @@ target_compile_options(neutral PRIVATE ${gfortran_opts})
 target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod
 hwm_ifc msis_ifc
 timeutils
-neutraldata neutraldata3D
+inputdata neutraldata neutraldata3D
 h5fortran::h5fortran
 MPI::MPI_Fortran
 )
@@ -16,9 +16,9 @@ $<TARGET_OBJECTS:grid> $<TARGET_OBJECTS:autogrid>
 $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 )
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
-target_link_libraries(test_proj PRIVATE config const reader
-timeutils pathlib mpimod const
-hwm_ifc
+target_link_libraries(test_proj PRIVATE config const reader inputdata neutraldata neutraldata3D
+timeutils pathlib mpimod const 
+hwm_ifc 
 msis_ifc
 MPI::MPI_Fortran
 )
