debugging neutral 2D input; not compiling yet

--- a/src/inputdata/CMakeLists.txt
+++ b/src/inputdata/CMakeLists.txt
@@ -12,6 +12,17 @@ target_link_libraries(efielddata PRIVATE const config grid meshobj interp timeut
 add_library(neutraldata OBJECT neutraldataobj.f90)
 target_link_libraries(neutraldata PRIVATE const inputdata)
 
+add_library(neutraldata2D OBJECT neutraldata2Dobj.f90)
+target_link_libraries(neutraldata2D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+
+add_library(neutraldata2Daxisymm OBJECT neutraldata2Daxisymmobj.f90)
+target_link_libraries(neutraldata2Daxisymm PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_compile_options(neutraldata2Daxisymm PRIVATE ${gfortran_opts})
+
+add_library(neutraldata2Dcart OBJECT neutraldata2Dcartobj.f90)
+target_link_libraries(neutraldata2Dcart PRIVATE const config grid meshobj interp timeutils neutraldata neutraldata2D inputdata MPI::MPI_Fortran h5fortran::h5fortran)
+target_compile_options(neutraldata2Dcart PRIVATE ${gfortran_opts})
+
 add_library(neutraldata3D OBJECT neutraldata3Dobj.f90 neuslab.f90)
 target_link_libraries(neutraldata3D PRIVATE const config grid meshobj interp timeutils neutraldata inputdata MPI::MPI_Fortran h5fortran::h5fortran)
 target_compile_options(neutraldata3D PRIVATE ${gfortran_opts})
