--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -117,3 +117,6 @@ gemini3d
 autogrid
 hwloc_ifc hwloc_c
 MUMPS::MUMPS SCALAPACK::SCALAPACK LAPACK::LAPACK MPI::MPI_Fortran)
+
+# NOTE: gemini_c.bin does not yet have unit testing, as we are deciding whether to make it a separate example
+# or even in a separate project. See https://github.com/gemini3d/libgemini
