neutral2D compiles with links to main GEMINI code, awaiting testing and cleanup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,7 +42,7 @@ set_target_properties(gemini.bin PROPERTIES
   RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 target_link_libraries(gemini.bin PRIVATE advec calculus config const collision diffusion fang grid io interp ionization gbsv
   inputdata precipdata efielddata
-  neutraldata neutraldata3D
+  neutraldata neutraldata3D neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
   meshobj meshobj_cart meshobj_dipole spherical newton geomagnetic
   exe_frontend
   msis_ifc multifluid
