--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(neutral OBJECT neutral.f90 atmos.f90 interp.f90 perturb.f90 proj.f90 wind.f90)
 target_compile_options(neutral PRIVATE ${gfortran_opts})
-target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod inputdata neutraldata neutraldata3D
+target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj interp mpimod inputdata neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 hwm_ifc msis_ifc
 timeutils
 h5fortran::h5fortran
@@ -15,5 +15,5 @@ add_executable(test_proj test_proj.f90
   $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 )
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
-target_link_libraries(test_proj PRIVATE config const reader inputdata neutraldata neutraldata3D
+target_link_libraries(test_proj PRIVATE config const reader inputdata neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 hwm_ifc msis_ifc timeutils pathlib mpimod const MPI::MPI_Fortran)
