--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -4,6 +4,7 @@ target_link_libraries(neutral PRIVATE config const reader pathlib grid meshobj i
 hwm_ifc msis_ifc
 timeutils
 inputdata neutraldata neutraldata3D
+neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 h5fortran::h5fortran
 MPI::MPI_Fortran
 )
@@ -16,7 +17,7 @@ $<TARGET_OBJECTS:grid> $<TARGET_OBJECTS:autogrid>
 $<TARGET_OBJECTS:neutral> $<TARGET_OBJECTS:interp>
 )
 target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
-target_link_libraries(test_proj PRIVATE config const reader inputdata neutraldata neutraldata3D
+target_link_libraries(test_proj PRIVATE config const reader inputdata neutraldata neutraldata3D neutraldata2D neutraldata2Dcart neutraldata2Daxisymm
 timeutils pathlib mpimod const 
 hwm_ifc 
 msis_ifc
