--- a/.github/workflows/intel-oneapi.yml
+++ b/.github/workflows/intel-oneapi.yml
@@ -12,7 +12,9 @@ on:
       - "**.cmake"
       - "**/CMakeLists.txt"
       - ".github/workflows/intel-oneapi.yml"
-
+# paths ignore starting with "!"
+      - "!docs/**"
+      - "!scripts/**"
 
 jobs:
 
