intel options: use gen expr for clarity
mpiseq: use gen expr for clarity

glow gen expr

Intel linux flags correction

 intel: consolidate options

more consolidate intel flags

pathlib: consolidate logic

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ on:
       - "**.F90"
       - "**.cmake"
       - "**/CMakeLists.txt"
-      - ".github/workflows/ci.yml"
+      - "!cmake/compilers/intel.cmake"
 # paths ignore starting with "!"
       - "!docs/**"
 
