--- a/src/mpimod/CMakeLists.txt
+++ b/src/mpimod/CMakeLists.txt
@@ -12,12 +12,11 @@ add_library(mpimod OBJECT
   ${CMAKE_CURRENT_BINARY_DIR}/mpimod.f90
   $<TARGET_OBJECTS:autogrid>
   mpisend.f90 mpirecv.f90 mpihalo.f90)
-target_link_libraries(mpimod PRIVATE const MPI::MPI_Fortran)
-if(NOT mpi)
-  # the reason for this is the MPI-1 Fortran 77 linking in MUMPS
-  # this seemed to be an easy way to avoid symbol clashes
-  target_link_libraries(mpimod PRIVATE MUMPS::MPISEQ)
-endif()
+target_link_libraries(mpimod PRIVATE const
+MPI::MPI_Fortran
+$<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
+)
+# MPI-1 Fortran 77 linking in MUMPS--easy way to avoid symbol clashes
 
 #-----
 
