mangle coordinates as needed for inputdata+dipolemesh

--- a/src/inputdata/CMakeLists.txt
+++ b/src/inputdata/CMakeLists.txt
@@ -4,10 +4,10 @@ add_library(inputdata OBJECT inputdataobj.f90)
 target_link_libraries(inputdata PRIVATE const config meshobj interp timeutils)
 
 add_library(precipdata OBJECT precipdataobj.f90)
-target_link_libraries(precipdata PRIVATE const config meshobj interp timeutils mpimod inputdata MPI::MPI_Fortran)
+target_link_libraries(precipdata PRIVATE const config meshobj meshobj_dipole interp timeutils mpimod inputdata MPI::MPI_Fortran)
 
 add_library(efielddata OBJECT efielddataobj.f90)
-target_link_libraries(efielddata PRIVATE const config grid meshobj interp timeutils inputdata)
+target_link_libraries(efielddata PRIVATE const config grid meshobj meshobj_dipole interp timeutils inputdata)
 
 add_library(neutraldata OBJECT neutraldataobj.f90)
 target_link_libraries(neutraldata PRIVATE const inputdata)
