possible fix for coordinate mangling in inputdata object

--- a/src/inputdata/CMakeLists.txt
+++ b/src/inputdata/CMakeLists.txt
@@ -1,7 +1,7 @@
 set_directory_properties(PROPERTIES LABELS inputdata)
 
 add_library(inputdata OBJECT inputdataobj.f90)
-target_link_libraries(inputdata PRIVATE const config meshobj interp timeutils)
+target_link_libraries(inputdata PRIVATE const config meshobj meshobj_dipole interp timeutils)
 
 add_library(precipdata OBJECT precipdataobj.f90)
 target_link_libraries(precipdata PRIVATE const config meshobj meshobj_dipole interp timeutils mpimod inputdata MPI::MPI_Fortran)
