--- a/src/ionization/CMakeLists.txt
+++ b/src/ionization/CMakeLists.txt
@@ -15,13 +15,16 @@ set_tests_properties(unit:fangIonize PROPERTIES
   TIMEOUT 10
   LABELS unit)
 
-if(Python3_FOUND)
+if(python)
   add_test(NAME unit:fangIonize:python
-    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_fang.py $<TARGET_FILE:test_fang>)
+    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/test_fang.py $<TARGET_FILE:test_fang>
+  )
   set_tests_properties(unit:fangIonize:python PROPERTIES
     TIMEOUT 30
-    LABELS "unit;python")
-endif(Python3_FOUND)
+    LABELS "unit;python"
+    DISABLED $<NOT:$<BOOL:${Python3_FOUND}>>
+  )
+endif()
 
 endif(BUILD_TESTING)
 
